Leyendo correctamente de la api

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -106,7 +106,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.0" width="20" height="20" viewBox="0 0 1024 1024" preserveAspectRatio="xMidYMid meet">
                     <g transform="translate(0.000000,1125.000000) scale(0.100000,-0.100000)" fill="#ffffff" stroke-width="2">
                       <path d="M2047 9184 c-195 -30 -359 -93 -507 -194 -266 -182 -449 -463 -517 -791 -16 -78 -17 -281 -21 -2984 -2 -2158 0 -2928 8 -3009 37 -342 164 -616 378 -817 173 -162 354 -251 642 -317 70 -16 289 -17 3050 -20 2077 -2 3004 0 3070 8 282 32 504 143 725 365 204 205 320 452 354 758 15 130 15 5786 1 5907 -34 288 -154 532 -365 745 -170 172 -368 278 -623 337 l-97 23 -3005 1 c-2514 2 -3019 0 -3093 -12z m6178 -373 c324 -109 569 -359 646 -658 18 -72 19 -162 19 -3013 l1 -2938 -22 -94 c-42 -179 -112 -310 -230 -427 -142 -143 -356 -246 -559 -271 -118 -14 -5815 -14 -5929 0 -100 13 -222 50 -316 97 -256 128 -412 344 -471 651 -22 115 -21 5887 1 5982 50 215 198 423 395 557 126 85 256 133 390 142 47 3 1417 4 3045 1 l2960 -5 70 -24z"/>
-                      <path d="M6055 8119 c-260 -35 -518 -256 -670 -574 -235 -491 -209 -1038 71 -1461 160 -242 406 -362 686 -333 134 14 246 60 369 155 209 160 390 505 450 855 59 341 -36 779 -222 1030 -175 237 -437 362 -684 328z m228 -372 c139 -64 256 -228 323 -452 23 -77 27 -113 31 -255 6 -191 -12 -304 -74 -470 -114 -308 -278 -475 -480 -488 -237 -15 -423 173 -489 496 -44 220 -42 375 12 586 75 301 259 551 443 603 95 48 144 49 229 6z"/>
+                      <path d="M6055 8119 c-260 -35 -518 -256 -670 -574 -235 -491 -209 -1038 71 -1461 160 -242 406 -362 686 -333 212 86 434 339 556 632 139 339 177 676 106 963 -46 190 -184 374 -343 459 -123 66 -312 89 -440 55z m278 -335 c138 -68 197 -193 209 -435 17 -362 -108 -701 -342 -922 -147 -139 -262 -175 -379 -118 -147 72 -225 241 -226 487 0 115 28 293 61 393 81 240 285 508 448 589 95 48 144 49 229 6z"/>
                       <path d="M3920 8104 c-256 -69 -473 -300 -588 -626 -161 -454 -42 -1066 282 -1452 79 -94 267 -219 389 -259 89 -29 254 -28 362 2 192 54 351 187 480 402 97 164 142 317 166 566 25 262 -36 558 -169 817 -70 138 -146 238 -266 354 -162 154 -298 213 -495 211 -60 0 -130 -7 -161 -15z m316 -363 c112 -53 245 -203 324 -366 114 -238 145 -550 79 -800 -62 -238 -164 -392 -306 -462 -51 -24 -69 -28 -148 -7 -178 36 -348 198 -469 447 -178 365 -169 830 18 1013 57 56 104 73 188 69 49 -3 80 -12 120 -33z"/>
                       <path d="M2431 6785 c-94 -26 -171 -75 -257 -160 -172 -171 -246 -395 -231 -704 29 -612 357 -1154 772 -1277 83 -24 249 -24 329 0 111 33 176 73 267 165 73 74 94 103 138 192 85 174 113 339 93 550 -40 401 -203 765 -456 1014 -175 173 -286 226 -486 232 -81 2 -131 -2 -169 -12z m290 -341 c72 -39 213 -180 278 -279 70 -107 134 -242 165 -347 53 -183 70 -412 41 -537 -33 -140 -143 -289 -239 -326 -39 -15 -54 -16 -102 -7 -178 36 -348 198 -469 447 -52 155 -68 274 -62 452 4 83 13 182 21 220 41 183 134 333 261 420 120 83 227 94 351 36z"/>
                       <path d="M7480 6784 c-117 -32 -244 -117 -370 -250 -98 -104 -174 -217 -244 -365 -231 -485 -231 -970 0 -1295 166 -234 456 -313 735 -199 212 86 434 339 556 632 139 339 177 676 106 963 -46 190 -184 374 -343 459 -123 66 -312 89 -440 55z m278 -335 c138 -68 197 -193 209 -435 17 -362 -108 -701 -342 -922 -147 -139 -262 -175 -379 -118 -147 72 -225 241 -226 487 0 115 28 293 61 393 81 240 285 508 448 589 95 48 144 49 229 6z"/>
@@ -255,7 +255,7 @@
                 </div>
             </div>
 
-            <div class="pets-grid">
+            <div id="pets-grid">
                 <!--Construcción mediante JavaScript-->
             </div>
         </div>
@@ -520,13 +520,13 @@
     <script src="Scripts/main.js"></script>
     <script src="Scripts/openLogin.js"></script>
     <script type="module" src="Scripts/login.js"></script>
-    <script src="Scripts/navigation.js"></script>
+    <script type="module" src="Scripts/navigation.js"></script>
     <script src="Scripts/AppointmentManager.js"></script>
     <script src="Scripts/AppointmentDataManager.js"></script>
     <script src="Scripts/AppointmentUI.js"></script>
     <script src="Scripts/petDelete.js"></script>
-    <script src="Scripts/petManager.js"></script>
-    <script src="Scripts/petView.js"></script>
+    <script type="module" src="Scripts/petManager.js"></script>
+    <script type="module" src="Scripts/petView.js"></script>
     <script src="Scripts/petForm.js"></script>
     <script src="Scripts/petEdit.js"></script>
     <script type="module" src="Scripts/ProfileManager.js"></script>
