--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -528,7 +528,7 @@
     <script type="module" src="Scripts/petManager.js"></script>
     <script type="module" src="Scripts/petView.js"></script>
     <script src="Scripts/petForm.js"></script>
-    <script src="Scripts/petEdit.js"></script>
+    <script type="module" src="Scripts/petEdit.js"></script>
     <script type="module" src="Scripts/ProfileManager.js"></script>
     <script type="module" src="Scripts/ProfileUI.js"></script>
     <!-- Sistema de roles y autenticación -->
