--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -526,9 +526,9 @@
     <script src="Scripts/AppointmentUI.js"></script>
     <script src="Scripts/petDelete.js"></script>
     <script type="module" src="Scripts/petManager.js"></script>
-    <script type="module" src="Scripts/petView.js"></script>
+    <script type="module" src="Scripts/PetView.js"></script>
     <script src="Scripts/petForm.js"></script>
-    <script type="module" src="Scripts/petEdit.js"></script>
+    <script type="module" src="Scripts/PetEdit.js"></script>
     <script type="module" src="Scripts/ProfileManager.js"></script>
     <script type="module" src="Scripts/ProfileUI.js"></script>
     <!-- Sistema de roles y autenticación -->
