Corregido edad y peso

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -355,11 +355,11 @@
                         <h3>Información básica</h3>
                         <div class="info-grid">
                             <div class="info-item">
-                                <div class="info-label">Edad</div>
+                                <div class="info-label">Edad(años)</div>
                                 <div class="info-value">Edad</div>
                             </div>
                             <div class="info-item">
-                                <div class="info-label">Peso</div>
+                                <div class="info-label">Peso(kg)</div>
                                 <div class="info-value">Peso</div>
                             </div>
                             <div class="info-item">
