--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -523,12 +523,11 @@
     <script type="module" src="Scripts/navigation.js"></script>
     <script src="Scripts/AppointmentManager.js"></script>
     <script src="Scripts/AppointmentDataManager.js"></script>
-    <script src="Scripts/AppointmentUI.js"></script>
+    <script type="module" src="Scripts/AppointmentUI.js"></script>
     <script type="module" src="Scripts/PetManager.js"></script>
-    <script type="module" src="Scripts/petForm.js"></script>
+    <script type="module" src="Scripts/PetForm.js"></script>
     <script type="module" src="Scripts/PetView.js"></script>
     <script type="module" src="Scripts/PetDelete.js"></script>
-    <script type="module" src="Scripts/PetForm.js"></script>
     <script type="module" src="Scripts/PetEdit.js"></script>
     <script type="module" src="Scripts/ProfileManager.js"></script>
     <script type="module" src="Scripts/ProfileUI.js"></script>
