--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -521,7 +521,7 @@
     <script src="Scripts/openLogin.js"></script>
     <script type="module" src="Scripts/login.js"></script>
     <script type="module" src="Scripts/navigation.js"></script>
-    <script src="Scripts/AppointmentManager.js"></script>
+    <script type="module" src="Scripts/AppointmentManager.js"></script>
     <script src="Scripts/AppointmentDataManager.js"></script>
     <script type="module" src="Scripts/AppointmentUI.js"></script>
     <script type="module" src="Scripts/PetManager.js"></script>
