--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -146,7 +146,7 @@
                 </i> 
                 Perfil
             </a>
-            <a href="#" class="btn btn-outline session-control">
+            <a href="#" class="btn btn-outline session-control" onclick="abrir()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="transform: translateY(1.3px);">
                     <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
                     <polyline points="16 17 21 12 16 7"></polyline>
