Sólo poder añadir edad en años a una mascota

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -319,13 +319,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="pet-age">Edad</label>
+                        <label for="pet-age">Edad (años)</label>
                         <div class="age-input">
-                            <input type="number" id="pet-age" class="form-control" min="0" required>
-                            <select id="pet-age-unit" class="form-control">
-                                <option value="años">años</option>
-                                <option value="meses">meses</option>
-                            </select>
+                            <input type="number" id="pet-age" class="form-control" min="0" step="1" required>
                         </div>
                     </div>
                     <div class="form-group">
