Casi terminado Gestión de citas

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -539,7 +539,7 @@
     <script type="module" src="Scripts/login.js"></script>
     <script type="module" src="Scripts/navigation.js"></script>
     <script type="module" src="Scripts/AppointmentManager.js"></script>
-    <script src="Scripts/AppointmentDataManager.js"></script>
+    <script type="module" src="Scripts/AppointmentDataManager.js"></script>
     <script type="module" src="Scripts/AppointmentUI.js"></script>
     <script type="module" src="Scripts/PetManager.js"></script>
     <script type="module" src="Scripts/PetForm.js"></script>
